# github-cadency

./: .env.example  CLAUDE.md  DEVPULSE_MANAGEMENT_FEATURES.md  DEVPULSE_SPEC.md  README.md  docker-compose.override.yml  docker-compose.yml
.claude/: pipeline.json
.claude/commands/: README.md  architect.md
.claude/docs/analysis/: DEEP-DIVE-ANALYSIS.md  competition.md
.claude/docs/logging-export/: README.md  pyproject.toml
.claude/docs/logging-export/infrastructure/: prometheus.yml  promtail-config.yml
.claude/docs/logging-export/source/: __init__.py  audit.py  logging.py  middleware.py
.claude/docs/logging-export/tests/: test_audit.py  test_logging.py
.claude/skills/document-changes/: SKILL.md
.claude/tasks/architectural-concerns/: H-01-missing-initial-migration.md  H-02-jwt-revocation.md  H-03-sync-httpx-import-bug.md  L-01-default-range-duplication.md  L-02-python-only-defaults.md  L-03-dead-code-cleanup.md  M-06-claude-api-retry.md  (+16 more)
.github/workflows/: deploy.yml  e2e.yml  error-triage.yml  runner-meter.yml
backend/: Dockerfile  conftest.py  requirements.txt
backend/app/: config.py  main.py
backend/scripts/: recompute_review_quality.py
docs/: API.md  DEPLOYMENT.md  HETZNER-SETUP.md
docs/architecture/: API-DESIGN.md  DATA-FLOWS.md  DATA-MODEL.md  FRONTEND.md  INDEX.md  OVERVIEW.md  SERVICE-LAYER.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
infrastructure/: Caddyfile  loki-config.yml  prometheus.yml  promtail-config.yml
scripts/: backup-db.sh  deploy.sh  rollback.sh
(+260 files in other folders)
